--- a/src/main/resources/static/article-write.html
+++ b/src/main/resources/static/article-write.html
@@ -36,6 +36,9 @@
             url:"/news/addNews",
             data:{"title":$("#title").val(),
                   "content":content
+            },
+            success:function () {
+                window.location.href="/article-list.html";
             }
         })
     })
