--- a/src/main/resources/static/drom-add.html
+++ b/src/main/resources/static/drom-add.html
@@ -73,6 +73,10 @@
                 $("#div1").show();
                 $("#div1").html("<p>信息填写不完整</p>");
                 return;
+        }if($("#dnumberspan").text().length!=0){
+            $("#div1").show();
+            $("#div1").html("<p>请重新填写宿舍号</p>");
+            return;
         }
         $("#true").click();
     }
