--- a/src/main/resources/static/student-list.html
+++ b/src/main/resources/static/student-list.html
@@ -3,11 +3,11 @@
 <html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/h-ui/css/H-ui.min.css" />
-    <link rel="stylesheet" type="text/css" href="/h-ui.admin/css/H-ui.admin.css" />
-    <link rel="stylesheet" type="text/css" href="/lib/Hui-iconfont/1.0.8/iconfont.css" />
-    <link rel="stylesheet" type="text/css" href="/h-ui.admin/skin/green/skin.css" id="skin" />
-    <link rel="stylesheet" type="text/css" href="/h-ui.admin/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/h-ui/css/H-ui.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/h-ui.admin/css/H-ui.admin.css"/>
+    <link rel="stylesheet" type="text/css" href="/lib/Hui-iconfont/1.0.8/iconfont.css"/>
+    <link rel="stylesheet" type="text/css" href="/h-ui.admin/skin/green/skin.css" id="skin"/>
+    <link rel="stylesheet" type="text/css" href="/h-ui.admin/css/style.css"/>
     <title>Title</title>
     <style>
         table th, table td {
@@ -53,7 +53,7 @@
 
         #center-one {
             margin: 0 auto;
-            width: 900px;
+            width: 100%;
             height: 700px;
         }
 
@@ -62,6 +62,7 @@
     <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
     <script src="https://cdn.staticfile.org/vue-resource/1.5.1/vue-resource.min.js"></script>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/lib/layer/2.4/layer.js"></script>
     <script src="/js/layui.all.js"></script>
     <script type="text/javascript">
         var start = 1;
@@ -81,23 +82,19 @@
                     return;
                 }
             });
-              $.get("/student/selectAllStudent",function (data) {
-                  $("#count").text(JSON.parse(data).length)
-              })
+            $.get("/student/selectAllStudent", function (data) {
+                $("#count").text(JSON.parse(data).length)
+            })
 
             function methodA(data) {
                 var str = "";
                 for (var i = 0; i < data.length; i++) {
-                    if (data[i].personid == 1) {
-                        continue;
-                    }
-                    str = "<tr id=" + data[i].id + "><td><input name='studentid' type='checkbox' value='" + data[i].id + "'></td><td>" + (i+1)+ "</td><td>" + data[i].sname + "</td><td>" + data[i].snumber +
-                        "</td><td>" + data[i].sbrithday + "</td><td>" +
+                    str = "<tr id=" + data[i].id + "><td><input name='studentid' type='checkbox' value='" + data[i].id + "'></td><td>" + (i+1) + "</td><td>" + data[i].sname + "</td><td>" + data[i].snumber +
+                        "</td><td>" + data[i].xyName + "</td><td>" + data[i].zyName + "</td><td>" + data[i].cname + "</td><td>" + data[i].sbrithday + "</td><td>" +
                         data[i].sage + "</td><td>" + data[i].sphone +
-                        "</td><td><button style='background-color: lightgreen'>修改</button>&nbsp;&nbsp;&nbsp;" +
+                        "</td><td><button style='background-color: lightgreen' onclick='updateStudent(" + data[i].id + ")'>修改</button>&nbsp;&nbsp;&nbsp;" +
                         "<button class='btn'  style='background-color: red' onclick='del(" + data[i].id + ")'>删除</button></td></tr>";
                     $("table").append(str);
-
                 }
             }
         }
@@ -112,32 +109,18 @@
                     $("#xy").append(str1);
                 }
             })
-
             $("#file").click(function () {
-                var timestamp = new Date().getTime();
-                console.log("导出Excel")
-                $.ajax({
-                    type: "post",
-                    url: "/excel/export",
-                    data: {"filename": timestamp},
-                    success: function (data) {
-                        alert("导出成功")
-                    },
-                    error: function () {
-                        alert("导出失败")
-                    }
-                })
-
+                window.location.href="/excel/export"
             })
             $("#file1").click(function () {
-              layer.open({
+                layer.open({
                     type: 1,
                     title: "Excel导入",
                     fixed: false,
                     offset: '100px',
-                    top:0,
-                    right:0,
-                    area: ['300px', '100px'],
+                    top: 0,
+                    right: 0,
+                    area: ['500px', '300px'],
                     content: "<html><body><form action=\"/excel/import\" method=\"post\" enctype=\"multipart/form-data\">\n" +
                         "\n" +
                         "        <div>选择需要导入的Excel表格文件<input type=\"file\" name=\"file\"></div>\n" +
@@ -155,18 +138,18 @@
                 });
             });
 
-          /*  $("#addStudent").click(function () {
-                $("#addStudent01").show();
-                $("#center").hide();
-            })
-            $("#qx").click(function () {
-                $("#addStudent01").hide();
-                $("#center").show();
-            })
-            $("#true").click(function () {
-                $("#addStudent01").hide();
-                $("#center").show();
-            })*/
+            //jq如何实现点击一行的随便一个位置 就可以选择该行的check
+            $("body").delegate('tr', 'click', function (e) {
+                if (e.target.type === 'checkbox') {
+                    return;
+                }
+                if ($(this).find(":checkbox").prop("checked")) {
+                    $(this).find(":checkbox").removeAttr("checked");
+                } else {
+                    $(this).find(":checkbox").prop("checked", true);
+                }
+            });
+
             $("#all").click(function () {
                 if (tmp != 0) {
                     var val = $("input[type='checkbox']");
@@ -198,36 +181,68 @@
             method(start)
 
         }
-
+        //修改一条数据
+        function updateStudent(id) {
+            $.ajax({
+                method:"get",
+                url:"/student/updateOne",
+                data:{
+                    id:id
+                },success:function () {
+                    window.location.href="/student-update.html";
+                }
+            })
+        }
         function del(del) {
-            $("#" + del).remove();
+            var index = layer.load(1, {
+                shade: [0.1,'#fff'] //0.1透明度的白色背景
+            });
             $.get("/student/delstudent", {"id": del}, function () {
+                layer.close(index);
+                $("#" + del).remove();
+                layer.msg("删除成功")
+                setTimeout(go,1500);
             });
         }
 
         //批量删除
         function deleteAll() {
             var all = $("input:checked[name='studentid']"); //所有name为ck并且是选择状态的checkbox
-
-
-            //删除
-            var str = ",";
-            var ids = "";
-            for (var i = 0; i < all.length; i++) {
-                ids = ids + $("input:checked[name='studentid']").attr("value") + str;
-                all[i].parentNode.parentNode.remove();
+            console.log(all.length)
+            if (all.length <= 0) {
+                layer.msg("请选择要删除的数据")
+            } else {
+                layer.confirm('是否删除被选中的数据？', {
+                    btn: ['是', '否'] //按钮
+                }, function () {
+                    //删除
+                    var ids = new Array();
+                    for (var i = 0; i < all.length; i++) {
+                        ids.push(all[i].getAttribute("value"));
+                        all[i].parentNode.parentNode.remove();
+                    }
+                    $.ajax({
+                        url: "/student/delAll",
+                        data: {ids: ids},
+                        dataType: "json",
+                        traditional: true,
+                        success: function (data) {
+                            layer.msg("删除成功");
+                            setTimeout(go, 1500);
+                        }, error: function () {
+                            layer.msg("请检查网络异常");
+                            return;
+                        }
+                    })
+                }, function () {
+                    layer.closeAll();
+                    return;
+                });
             }
-            $.ajax({
-                url:"/student/delAll",
-                data:ids,
-                dataType: "json",
-                success:function (data) {
-                    
-                }
-            })
-           /* window.location.href = "/student/delAll?ids=" + ids;*/
         }
-
+        function go() {
+            window.location.reload();
+        }
         function select() {
             if ($("#xy").val() == "请选择学院") {
                 $("#zy  option").remove("");
@@ -264,72 +279,35 @@
 
 </head>
 <body>
-<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;"  onclick="deleteAll()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius"  href="/addstudent.html"><i class="Hui-iconfont">&#xe600;</i> 添加学生</a></span> <span class="r">共有数据：<strong><span id="count"></span></strong> 条</span> </div>
-<div id="addStudent01" style="display:none">
-    <form action="/student/addstudent" method="get">
-        用户名：
-        <pre>       <input class="addStudent" type="text" name="sname"></pre>
-        密码：
-        <pre>       <input class="addStudent" type="text" name="spassword"></pre>
-        电话：
-        <pre>       <input class="addStudent" type="text" name="sphone"></pre>
-        学号：
-        <pre>       <input class="addStudent" type="text" name="snumber"></pre>
-        出生年月:
-        <pre>       <input class="addStudent" type="date" name="sbrithday"></pre>
-        学院：
-        <pre>       <select class="addStudent" type="text" name="dxy" id="xy" onchange="select()"><option>请选择学院</option></select></pre>
-        专业：
-        <pre>       <select class="addStudent" type="text" name="dzy" id="zy" onchange="ZYchange()"><option>请选择专业</option></select></pre>
-        班级：
-        <pre>       <select class="addStudent" type="text" name="dclass" id="cla"><option>请选择班级</option></select></pre>
-        <pre>       <input class="add1" type="button" value="取消" id="qx">                 <input class="add1"
-                                                                                                 type="button"
-                                                                                                 value="提交"
-                                                                                                 onclick="methodBtn()">   <input
-                class="add1" type="submit" value="提交" id="true" style="display: none"></pre>
-    </form>
-</div>
+<div class="cl pd-5 bg-1 bk-gray mt-20"><span class="l"><a href="javascript:;" onclick="deleteAll()"
+                                                           class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a
+        class="btn btn-primary radius" href="/addstudent.html" style="margin-left: 10px"><i class="Hui-iconfont">&#xe600;</i> 添加学生</a></span><input type="button" value="Excel导出" id="file"
+                                                                                                                          class="btn btn-danger radius" style="margin-left: 10px"><input type="button" value="Excel导入" id="file1"  class="btn btn-danger radius" style="margin-left: 10px">
+    <span class="r">共有数据：<strong><span id="count"></span></strong> 条</span></div>
+
 <div id="center">
- <!--   <div id="div_left"><input type="button" value="批量删除"
-                              style="width: 200px;height: 60px;background-color:red;border-radius: 6px"
-                              onclick="deleteAll()"
-                              style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px"></div>
-    <div id="div_right">
-        <button id="addStudent" style="width: 200px;height: 60px;background-color: deepskyblue;border-radius: 6px">
-            新增学生
-        </button>
-    </div>-->
-    <input type="button" value="Excel导出" id="file"
-           style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px"><input type="button"
-                                                                                                     value="Excel导入"
-                                                                                                     id="file1"
-                                                                                                     style="background-color: deepskyblue;width: 200px;height: 60px;border-radius: 3px"></pre>
-    <pre>
-
-
-
-    </pre>
-
-    <pre><span class="span1">学生名：</span>  <input type="text" class="check" placeholder="请输入学生名">    <span class="span1">学号：</span>  <input
-            type="text" class="check" placeholder="请输入学生学号">    <span class="span1">学院：</span>  <select id="xy"
+    <pre><span class="span1">学生名：</span>  <input type="text" class="check" placeholder="请输入学生名" id="sname">    <span class="span1">学号：</span>  <input
+            type="text" class="check" placeholder="请输入学生学号" id="snumber">    <span class="span1">学院：</span>  <select id="xy"
                                                                                                         class="check"
-                                                                                                        onchange="select()"><option>请选择学院</option></select>   <span
-            class="span1">专业：</span>  <select id="zy" type="text" class="check" onchange="ZYchange()"><option>请选择专业</option></select>   <span
-            class="span1">班级：</span>  <select type="text" class="check" id="cla"><option>请选择班级</option></select>   <input
-            class="check" type="button" value="搜索" style="background-color: deepskyblue"></pre>
+                                                                                                        onchange="select()"><option value='0'>请选择学院</option></select>   <span
+            class="span1">专业：</span>  <select id="zy" type="text" class="check" onchange="ZYchange()"><option value='0'>请选择专业</option></select>   <span
+            class="span1">班级：</span>  <select type="text" class="check" id="cla"><option value='0'>请选择班级</option></select>   <input
+            class="check" type="button" value="搜索" id="searchStudent" style="background-color: deepskyblue"></pre>
     <div id="center-one">
         <table cellspacing="0" cellpadding="0">
             <th width="40"><input type="button" value="全选" id="all"/></th>
             <th width="80">序号</th>
             <th width="100">学生</th>
             <th width="150">学号</th>
+            <th width="150">学院名称</th>
+            <th width="150">专业名称</th>
+            <th width="150">班级名称</th>
             <th width="150">出生日期</th>
             <th width="80">年龄</th>
             <th width="200">电话</th>
             <th width="200">操作</th>
         </table>
-        <pre>                               <input class="ye" type="button" value="上一页" onclick="upordown(start-1)">              <input
+        <pre>                                                         <input class="ye" type="button" value="上一页" onclick="upordown(start-1)">              <input
                 type="text" style="width: 60px;height: 20px;text-align: center" readonly="readonly" id="ye_center">               <input
                 class="ye" type="button" value="下一页" onclick="upordown(start+1)"></pre>
     </div>
@@ -342,6 +320,38 @@
 
 </body>
 <script>
+    $("#searchStudent").click(function () {
+        var sname=$("#sname").val();
+        var snumber=$("#snumber").val();
+        var zy=$("#zy").val();
+        var xy=$("#xy").val();
+        var cla=$("#cla").val();
+        $.ajax({
+            method: "get",
+            url: "/student/searchStusent",
+            data: {"sname": sname, "snumber": snumber,"colid":xy,"proid":zy,"classid":cla},
+            success:function (data) {
+                var data = JSON.parse(data)
+                $("table  tr:not(:first)").empty("");
+                $("#count").text(data.length);
+                var str = "";
+                for (var i = 0; i < data.length; i++) {
+                    if (data[i].personid == 1) {
+                        continue;
+                    }
+                    str = "<tr id=" + data[i].id + "><td><input name='studentid' type='checkbox' value='" + data[i].id + "'></td><td>" + (i + 1) + "</td><td>" + data[i].sname + "</td><td>" + data[i].snumber +
+                        "</td><td>" + data[i].sbrithday + "</td><td>" +
+                        data[i].sage + "</td><td>" + data[i].sphone +
+                        "</td><td><button style='background-color: lightgreen' onclick='updateStudent(" + data[i].id + ")'>修改</button>&nbsp;&nbsp;&nbsp;" +
+                        "<button class='btn'  style='background-color: red' onclick='del(" + data[i].id + ")'>删除</button></td></tr>";
+                    $("table").append(str);
+                }
+            },
+            error:function () {
+                layer.msg("请检查网络异常")
+            }
+        })
+    })
     function methodBtn() {
         if ($("#xy").val() == "请选择学院" || $("#zy").val() == "请选择专业" || $("#cla").val() == "请选择班级") {
             $("#div1").show();
@@ -355,9 +365,9 @@
         console.log($("#xy").val())
         if ($("#xy").val() == "请选择学院") {
             $("#zy  option").remove("");
-            $("#zy").append("<option>请选择专业</option>")
+            $("#zy").append("<option value='0'>请选择专业</option>")
             $("#cla  option").remove("");
-            $("#cla").append("<option>请选择班级</option>")
+            $("#cla").append("<option value='0'>请选择班级</option>")
             return;
         }
         $("#zy  option").remove("");
